--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
+    "spotify-web-api-js": "^1.5.2",
     "styled-components": "^5.3.3"
   },
   "scripts": {
